--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         <a href="./index.html" class="header-logo" aria-label="Логотип сайта Web Studio">
           <p class="header-logo__title">Web<span class="header-logo__title--black">Studio</span></p>
         </a>
+        <button type="button" class="menu-button">
+          <svg
+            width="40"
+            height="40"
+            aria-label="Переключатель мобильного меню">
+            <use class="icon-close" href="./images/icons.svg#icon-close"></use>
+            <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
         <ul class="site-nav list">
           <li class="site-nav__item site-nav__item--current">
             <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
