--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
       <!-- TEAM -->
 
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="team__title section-title">Наша команда</h2>
           <ul class="card-set list">
@@ -525,11 +525,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Клієнти -->
 
-      <section class="section clients">
+      <!-- <section class="section clients">
         <div class="container">
           <h2 class="clients__title section-title">Постоянные клиенты</h2>
           <ul class="clients__list list">
@@ -566,11 +566,11 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- FOOTER -->
 
-    <!-- <footer class="footer no-padding">
+    <footer class="footer no-padding">
       <div class="container footer-section">
         <div class="footer-main">
           <a href="./index.html" class="footer-logo" aria-label="Логотип сайта Web Studio">
@@ -645,6 +645,7 @@
             </li>
           </ul>
         </div>
+        <!-- Footer form -->
         <form class="footer-form">
           <div class="footer-title">
             <h3 class="join-title">Подпишитесь на рассылку</h3>
@@ -662,7 +663,7 @@
           </div>         
         </form>
       </div>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
