--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 
       <!-- Секція Клієнти -->
 
-      <!-- <section class="section clients">
+      <section class="section clients">
         <div class="container">
           <h2 class="clients__title section-title">Постоянные клиенты</h2>
           <ul class="clients__list list">
@@ -566,7 +566,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
     <!-- FOOTER -->
 
