--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,30 @@
         <a href="./index.html" class="header-logo" aria-label="Логотип сайта Web Studio">
           <p class="header-logo__title">Web<span class="header-logo__title--black">Studio</span></p>
         </a>
+        <div class="drop-menu">
+          <button
+            type="button"
+            class="menu-button"
+            aria-expanded="false"
+            aria-controls="menu-container"  
+            data-menu-button>
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню">
+              <use class="icon-close" href="./images/icons.svg#icon-close"></use>
+              <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <div class="menu-container" id="menu-container" data-menu>
+            Контент меню
+          </div>
+        </div>
         <ul class="site-nav list">
           <li class="site-nav__item">
-            <a href="./index.html" class="site-nav__link">Студия</a>
+            <a href="./index.html" class="site-nav__link ">Студия</a>
           </li>
-          <li class="site-nav__item site-nav__item--current">
+          <li class="site-nav__item  site-nav__item--current">
             <a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a>
           </li>
           <li class="site-nav__item">
@@ -42,7 +61,7 @@
         <ul class="header-group list">
           <li class="header-group__item item">
             <a href="mailto:info@devstudio.com" class="header-group__link">
-              <svg class="header-group__icon" width="16" height="12">
+              <svg class="header-group__icon icon-envelope" width="" height="">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -50,7 +69,7 @@
           </li>
           <li class="header-item item">
             <a href="tel+380961111111" class="header-group__link">
-              <svg class="header-group__icon" width="10" height="16">
+              <svg class="header-group__icon icon-smartphone" width="" height="">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -327,87 +346,89 @@
 
     <footer class="footer no-padding">
       <div class="container footer-section">
-        <div class="footer-main">
-          <a href="./index.html" class="footer-logo" aria-label="Логотип сайта Web Studio">
-            <p class="footer-logo__title">Web<span class="footer-logo__title--white">Studio</span></p>
-          </a>
-          <address class="footer-group">
-            <p class="footer-group__contact">г.Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-group__list list">
-              <li class="footer-group__item">
-                <a href="mailto:info@devstudio.com" class="footer-group__link">info@devstudio.com</a>
+        <div class="footer-block">
+          <div class="footer-main">
+            <a href="./index.html" class="footer-logo" aria-label="Логотип сайта Web Studio">
+              <p class="footer-logo__title">Web<span class="footer-logo__title--white">Studio</span></p>
+            </a>
+            <address class="footer-group">
+              <p class="footer-group__contact">г.Киев, пр-т Леси Украинки, 26</p>
+              <ul class="footer-group__list list">
+                <li class="footer-group__item">
+                  <a href="mailto:info@devstudio.com" class="footer-group__link">info@devstudio.com</a>
+                </li>
+                <li class="footer-group__item">
+                  <a href="tel+380961111111" class="footer-group__link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="join-group">
+            <h3 class="join-title">Присоединяйтесь</h3>
+            <ul class="social list">
+              <li class="socials-item">
+                <a
+                  class="social-link link footer-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка Instagram"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-group__item">
-                <a href="tel+380961111111" class="footer-group__link">+38 096 111 11 11</a>
+              <li class="socials-item">
+                <a
+                  class="social-link link footer-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка Twitter"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="social-link link footer-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка Facebook"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="social-link link footer-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="иконка Linkedin"
+                >
+                  <svg class="socials-icon" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <div class="join-group">
-          <h3 class="join-title">Присоединяйтесь</h3>
-          <ul class="social list">
-            <li class="socials-item">
-              <a
-                class="social-link link footer-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Instagram"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="social-link link footer-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Twitter"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="social-link link footer-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Facebook"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a
-                class="social-link link footer-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Linkedin"
-              >
-                <svg class="socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <!-- Footer form -->
         <form class="footer-form">
           <div class="footer-title">
             <h3 class="join-title">Подпишитесь на рассылку</h3>
           </div>
           <div class="footer-submit">
-            <label class="footer-label">
-              <input class="footer-input" type="text" name="footer-mail" placeholder="E-mail">
-            </label>
+            <label class="footer-label" for="footer-mail"></label>
+            <input class="footer-input" type="text" name="footer-mail" id="footer-mail" placeholder="E-mail">
             <button class="footer-btn" type="submit">
               <span class="btn-title">Подписаться</span>
               <svg class="btn-icon" width="24" height="24">
@@ -418,5 +439,7 @@
         </form>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
